# Synapse

./: .gitignore  AGENT_INTEGRATION.md  DEMO_SCRIPT.md  HANDOFF.md  MILESTONES.md  MULTI_AGENT_STATUS.md  MULTI_AGENT_WORKFLOW.md  README.md  TEAMMATE_SETUP.md  install.sh  pipeline.mermaid  retrieval_spec.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-actian.txt
backend/agents/: __init__.py  constraint_agent.py  memory_agent.py  query_agent.py  schemas.py
backend/api/: app.py  chat.py  chat_store.py  corpora.py  dependencies.py  ingestion.py  jobs.py  retrieval.py  review.py  schemas.py  settings.py  workspace.py
backend/app/: code_ingestion.py  knowledge_ingestion.py  main.py  retrieval.py  smoke_test.py
backend/app/smoke/: code_ingestion.py  knowledge_ingestion.py  retrieval.py  smoke_test.py
backend/config/: settings.py
backend/embeddings/: __init__.py  schema.py  schemas.py  service.py
backend/ingestion/: schemas.py  walker.py
backend/ingestion/code/: __init__.py  languages.py  python_parser.py  walker.py
backend/ingestion/knowledge/: __init__.py  chunker.py  parser.py  pipeline.py
backend/jobs/: ingest_code.py  ingest_knowledge.py
backend/models/: __init__.py  config.py
backend/models/providers/: ollama.py  openai.py
backend/normalization/: schemas.py
backend/normalization/code/: normalizer.py  prompts.py  template.py
backend/normalization/knowledge/: __init__.py  normalizer.py  prompts.py  template.py
backend/retrieval/: __init__.py  filters.py  pipelines.py  retrieval.py  schemas.py
backend/storage/: __init__.py  vector_store.py
backend/synapse_cli/: __init__.py  doctor_command.py  drift_check_command.py  ingest_command.py  init_command.py  install_skill_command.py  main.py  query_command.py  reindex_command.py  reset_command.py  review_command.py  services_command.py  status_command.py  ui.py  ui_command.py  vscode_command.py  watch_command.py
backend/tests/agents/: conftest.py  test_constraint_agent.py  test_memory_agent.py  test_query_agent.py
backend/tests/api/: test_review.py
backend/tests/cli/: test_doctor.py  test_drift_check.py  test_ingest.py  test_init.py  test_install_skill.py  test_packaging.py  test_query.py  test_reindex.py  test_reset.py  test_review.py  test_services.py  test_watch.py
backend/tests/embeddings/: test_vector_store.py  vector_store.py
backend/tests/ingestion/: conftest.py  parser.py  schemas.py  test_chunker.py  test_parser.py  test_pipeline.py  test_walker.py  walker.py
backend/tests/normalization/: conftest.py  normalizer.py  template.py  test_knowledge_normalizer.py  test_knowledge_template.py
backend/tests/retrieval/: conftest.py  test_filters.py  test_retrieval.py  test_schemas.py
backend/tests/workspace/: test_loader.py  (+1 more)
backend/workspace/: __init__.py  loader.py  model_init.py  schemas.py
(+90 files in other folders)
