[project]
name = "synapse-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.13.0",
    "pydantic-settings",
    "actian-vectorai @ file:actian_vectorai-0.1.0b2-py3-none-any.whl",
    "pytest==9.0.3",
    "docling",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "openai==2.32.0",
    "python-dotenv==1.2.2",
]

[tool.setuptools]
packages = [
    "app",
    "config",
    "embeddings",
    "ingestion",
    "normalization",
    "storage",
    "models",
    "jobs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
markers = [
    "llm: marks tests that require a running LLM (deselect with -m 'not llm')",
]